enable client registration deletion
